--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -149,3 +149,24 @@ d-appendix {
     }
   }
 }
+
+.poem {
+  margin: 20px 0;
+}
+
+.stanza {
+  margin-bottom: 20px;
+}
+
+.line {
+  display: flex;
+  justify-content: space-between;
+}
+
+.original {
+  font-style: italic;
+}
+
+.translation {
+  font-weight: bold;
+}
